--- a/redSocialCarmen/public/css/styles.css
+++ b/redSocialCarmen/public/css/styles.css
@@ -7,9 +7,10 @@ body{
     background: #a0aec0;
     font-family: 'Nunito', sans-serif;
 }
-
-.nav{
+.table-header-group{
     background: crimson;
+}
+.nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,6 +32,13 @@ body{
     font-size:1.5em;
     color: #a0aec0;
     text-decoration: none;
+}
+.container{
+    display: flex;
+    justify-content: center;
+}
+.title{
+    color: #a0aec0;
 }
 .footer{
     background: crimson;
