fin comments clase

--- a/redSocialCarmen/public/css/styles.css
+++ b/redSocialCarmen/public/css/styles.css
@@ -1,32 +1,16 @@
-*{
-    box-sizing: border-box;
-}
-
 body{
     margin: 0;
     background: #a0aec0;
     font-family: 'Nunito', sans-serif;
 }
-.table-header-group{
-    background: crimson;
-}
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
 .logo{
     margin-left: 4em;
-    width: 7em;
-    height: 7em;
-}
-.nav_lista{
-    display: flex;
-    margin-right: 4em;
+    width: 5em;
+    height: 5em;
 }
 .lista_item{
-    margin: 1em;
-    list-style: none;
+    /*margin: 1em;*/
+    /*list-style: none;*/
 }
 .link{
     font-size:1.5em;
@@ -42,9 +26,6 @@ body{
     font-size: 3em;
 }
 .footer{
-    background: crimson;
-    display: flex;
-    flex-direction: column;
     align-items: center;
 }
 .link_logo{
