--- a/redSocialCarmen/public/css/styles.css
+++ b/redSocialCarmen/public/css/styles.css
@@ -32,7 +32,9 @@ body{
     width: 2em;
     height: 2em;
 }
-.img{
-    width: 40em;
-    height: 20em;
-}
+/*.img{*/
+/*    width: 40em;*/
+/*    height: 20em;*/
+/*}*/
+
+
